fixed overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .container {
